# Magura

./: .gitignore  CMakeLists.txt  Makefile  config.h.in  index.html
src/: application.cpp
web-app/: babel-watch.sh  package-lock.json  package.json
web-app/js/: app.js  control_bar.js  display.js  modal.js
web-app/src/: app.jsx  control_bar.jsx  display.jsx  modal.jsx
